# algoesup

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
Datalore/: environment.yml  how-to-setup-env.md  init.sh  m269.json  pyproject.toml  requirements.txt  tm112.json
DeepNote/: Dockerfile  algoesup.py  example-1-to-n.ipynb  example-jewels.ipynb  example-two-sum-2.ipynb  example-two-sum-3.ipynb  pyproject.toml  template-data-structures.ipynb  template-intro-programming.ipynb
Deepnote/: Dockerfile  algoesup.py  example-jewels.ipynb  example-two-sum-2.ipynb  example-two-sum-3.ipynb  m269.json  tm112.json
docs/: 404.html  Gemfile  _config.yml  datalore.md  deepnote-background.md  deepnote-how-to.md  deepnote-reference.md  deepnote.md  example-essays.md  feedback.md  getting-started-m269.md  getting-started.md  index.html  index.md  objects.inv  sitemap.xml  writing.md
docs/_data/: nav.yml
docs/_includes/components/: site_nav.html
docs/_layouts/: default.html
docs/_sass/color_schemes/: algoesup.scss
docs/_sass/rouge_schemes/: colorful.scss
docs/coding/: index.html
docs/deepnote/: index.html
docs/deepnote-background/: index.html
docs/deepnote-how-to/: index.html
docs/deepnote-reference/: index.html
docs/essays/: example-1-to-n.ipynb
docs/essays/example-1-to-n/: index.html
docs/essays/example-jewels/: index.html
docs/essays/example-two-sum-2/: index.html
docs/essays/example-two-sum-3/: index.html
docs/essays/template-data-structures/: index.html
docs/essays/template-intro-programming/: index.html
docs/example-essays/: index.html
docs/feedback/: index.html
docs/getting-started/: index.html
docs/getting-started-google-colab/: index.html
docs/getting-started-m269/: index.html
docs/jn-platform-comparison/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/writing/: index.html
src/: README.md  pyproject.toml
src/algoesup/: __init__.py  magics.py  test.py  time.py
src/docs/: coding.ipynb  deepnote-background.md  deepnote-how-to.md  deepnote-reference.md  deepnote.md  example-essays.md  feedback.md  getting-started-google-colab.md  getting-started-m269.md  getting-started.md  index.md  jn-platform-comparison.md  library.md  writing.md
src/docs/essays/: example-1-to-n.ipynb  example-jewels.ipynb  example-two-sum-2.ipynb  example-two-sum-3.ipynb  pyproject.toml  template-data-structures.ipynb  template-intro-programming.ipynb
tests/: callables.py  invalid.toml  test.ipynb  test_magics.py  test_test.py
