[tool.poetry]
name = "algoesup"
version = "0.4.2"
description = "Algorithmic essay support library"
authors = [
    "Michel Wermelinger <michel.wermelinger@open.ac.uk>",
    "Michael Snowden"
]
packages = [
    { include = "algoesup", from = "src" },
]
readme = "src/README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dsa-ou/algoesup/"
homepage = "https://dsa-ou.github.io/algoesup/library/"
keywords = ["education"]
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Operating System :: OS Independent",
    ]

[tool.poetry.urls]
"Changelog" = "https://github.com/dsa-ou/algoesup/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.13.1"
matplotlib = "^3.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "<1.0"
allowed = "^1.5"
pytype = {version = ">=2023.04.27", markers = "platform_system != 'Windows'"}
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.11"
mkdocstrings = { version = "^0.24.0", extras = ["python"] }
mkdocs-jupyter = "^0.24.0"
mkdocs-open-in-new-tab = "^1.0.3"
black = "^24.3.0"
pytest = "^8.3.3"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused import

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
